# InventorExport

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-core-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-data-model/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-adams-writer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-inventor-extraction/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-cli-integration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-additional-writers/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: COM_DEBUGGING_NOTES.md  ROADMAP_closed_loops.md
src/inventor_exporter/: __init__.py  __main__.py  cli.py
src/inventor_exporter/core/: __init__.py  com.py  logging.py  rotation.py  units.py
src/inventor_exporter/extraction/: __init__.py  assembly.py  client.py  constraints.py  geometry.py  mass.py  material.py
src/inventor_exporter/importing/: __init__.py  stl_importer.py
src/inventor_exporter/model/: __init__.py  assembly.py  body.py  constraint.py  inertia.py  kinematic_tree.py  material.py  topology.py  transform.py
src/inventor_exporter/writers/: __init__.py  adams.py  mesh_converter.py  mujoco.py  protocol.py  registry.py  sdf.py  urdf.py
tests/: test_cli.py  test_extraction_assembly.py  test_extraction_client.py  test_extraction_geometry.py  test_extraction_properties.py  test_kinematic_tree.py
tests/writers/: test_adams.py  test_mesh_converter.py  test_mujoco.py  test_sdf.py  test_urdf.py
