[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inventor-exporter"
version = "0.2.0"
description = "Export Autodesk Inventor assemblies to simulation formats (ADAMS, URDF, MuJoCo)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jonathan", email = "jonathan@example.com"}
]
keywords = ["inventor", "cad", "export", "adams", "urdf", "mujoco", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pywin32>=306",
    "scipy>=1.11",
    "numpy>=1.24",
    "click>=8.1",
    "lxml>=4.9",
    "cadquery>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/JonathanCamargo/InventorExport"
Repository = "https://github.com/JonathanCamargo/InventorExport"

[project.scripts]
inventorexport = "inventor_exporter.cli:main"
inventorimport = "inventor_exporter.cli:import_cmd"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
